--- a/package.json
+++ b/package.json
@@ -1,28 +1,21 @@
 {
-  "name": "scrapy-scraper",
+  "name": "mongoose_skeleton",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/nbrasaemle/Scrapy-scraper.git"
+    "start": "node server.js",
+    "watch": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/nbrasaemle/Scrapy-scraper/issues"
-  },
-  "homepage": "https://github.com/nbrasaemle/Scrapy-scraper#readme",
   "dependencies": {
-    "body-parser": "^1.18.3",
+    "axios": "^0.16.2",
+    "body-parser": "^1.18.2",
     "cheerio": "^1.0.0-rc.2",
-    "express": "^4.16.3",
-    "express-handlebars": "^3.0.0",
-    "mongoose": "^5.2.15",
-    "request": "^2.88.0"
+    "express": "^4.16.1",
+    "mongoose": "^5.0.11",
+    "morgan": "^1.9.0"
   }
 }
